[project]
name = "tele-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "YZ",email = "yoongcheyang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "geopandas (>=1.0.1,<2.0.0)",
    "smolagents (>=1.13.0,<2.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "osmnx (>=2.0.2,<3.0.0)",
    "staticmap (>=0.5.7,<0.6.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "contextily (>=1.6.2,<2.0.0)",
    "cmake (>=4.0.0,<5.0.0)",
    "alphashape (>=1.3.1,<2.0.0)",
    "ortools (>=9.12.4544,<10.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "matplotlib (==3.10.0)",
    "cython (>=3.0)",
    "numpy (>=2.0)",
    "scipy (>=1.7)",
    "astropy (>=6.0)",
    "pytest (>=5.4)",
    "pytest-remotedata (>=0.3.3)",
    "setuptools (>=80.3.1,<81.0.0)",
    "llama-index (>=0.12.37,<0.13.0)",
    "llama-index-llms-ollama (>=0.5.4,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.5.4,<0.6.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
packages = [{include = "tele_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
